ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ohs-ingress
  namespace: ohs
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ohs.saratoga.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-ui
            port:
              number: 80
